2008-04-17  Geoffrey Garen  <ggaren@apple.com> and Cameron Zwarich  <cwzwarich@uwaterloo.ca>

        Reviewed by Oliver Hunt.
        
        Behold: eval.
        
        Introduced a new opcode: op_call_eval. In the normal case, it performs
        an eval. In the case where eval has been overridden in some way, it
        performs a function call.

        * VM/CodeGenerator.h: Added a feature so the code generator knows not
        to optimized locals in eval code.
        
2008-04-17  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Sam Weinig.
        
        Added some ASSERTs to document codegen failures in
        run-javascriptcore-tests.
        
        For all tests, program-level codegen now either succeeds, or fails with
        an ASSERT.

        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::addVar):
        (KJS::CodeGenerator::CodeGenerator):
        (KJS::CodeGenerator::newTemporary):
        (KJS::CodeGenerator::newLabel):

2008-04-17  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Maciej Stachowiak.
        
        Fixed another case of a dst register being an unreferenced temporary
        (caused an ASSERT when running the full sunspider suite).

        * kjs/nodes.cpp:
        (KJS::CaseBlockNode::emitCodeForBlock):

2008-04-16  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Geoff.
        
        - add documentation (and meaningful parameter names) for arithmetic and bitwise binary ops

        * VM/CodeBlock.cpp:
        (KJS::CodeBlock::dump):
        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::emitMul):
        (KJS::CodeGenerator::emitDiv):
        (KJS::CodeGenerator::emitMod):
        (KJS::CodeGenerator::emitSub):
        (KJS::CodeGenerator::emitLeftShift):
        (KJS::CodeGenerator::emitRightShift):
        (KJS::CodeGenerator::emitUnsignedRightShift):
        (KJS::CodeGenerator::emitBitAnd):
        (KJS::CodeGenerator::emitBitXOr):
        (KJS::CodeGenerator::emitBitOr):